[project]
authors = [{ name = "wyf9", email = "wyf9@wyf9.top" }]
dependencies = [
  "fastapi[standard]>=0.118.0",
  "httpx>=0.28.1",
  "loguru>=0.7.3",
  "pydantic>=2.11.9",
  "pyyaml>=6.0.3",
  "user-agents>=2.2.0<3",
  "uvicorn>=0.37.0",
]
description = "A simple random background image API based on FastAPI and redirect"
name = "imgapi"
requires-python = ">3.13"
version = "1.0.0"

# better for both EU & CN users...?
# feel free to disable if meet any problem about it
# other mirrors available below
[[tool.uv.index]]
name = "siiway-mirror"
url = "https://pypi-mirror.siiway.top/pypi/simple/"
default = true

# WARN: not available for EU users
# [[tool.uv.index]]
# name = "tuna-mirror"
# url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
# default = true

# [[tool.uv.index]]
# name = "ustc-mirror"
# url = "https://mirrors.ustc.edu.cn/pypi/web/simple/"
# default = true
